// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flatten > common 1`] = `
[
  {
    "handlers": [
      {
        "status": 200,
      },
    ],
    "patterns": [
      "//example.com",
    ],
  },
]
`;

exports[`flatten > disable fragment 1`] = `
[
  {
    "handlers": [
      {
        "status": 200,
      },
    ],
    "patterns": [
      "//example.com",
    ],
  },
]
`;

exports[`flatten > disable fragment 2`] = `[]`;

exports[`flatten > multiple handlers 1`] = `
[
  {
    "handlers": [
      [Function],
    ],
    "patterns": [
      "//example.com",
    ],
  },
  {
    "handlers": [
      {
        "status": 404,
      },
    ],
    "patterns": [
      "//example.com",
    ],
  },
]
`;

exports[`flatten > with child routes 1`] = `
[
  {
    "handlers": [
      {
        "status": 200,
      },
    ],
    "patterns": [
      "//example.com",
      "//demo.com",
    ],
  },
  {
    "handlers": [
      {
        "status": 404,
      },
    ],
    "patterns": [
      "//example.com/not-found",
      "//demo.com/not-found",
    ],
  },
]
`;
